# voxel_test

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  README.md  ShaderProgram.cpp  ShaderProgram.h  camera.cpp  camera.h  generate_shader_loader.cmake  main.cpp  main.rc  vcpkg.json  voxelEngine.h
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h  glad.h
dependencies/glad/src/: glad.c
python/: Example.cpp  binding_VoxelEngine.cpp
shaders/: chunk.frag  chunk.vert  quad.vert  test.frag  test.vert
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  FlyingCamera.cpp  FlyingCamera.h  GlCommon.h  OpenGlCommon.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  ShaderProgram.cpp  ShaderProgram.h  Voxel.h  VoxelEngine.cpp  VoxelEngine.h  VoxelVertex.h  VoxelWorld.cpp  VoxelWorld.h  WindowManager.cpp  WindowManager.h  voxelEngine.cpp  voxelEngine.h
src/Bindings/: VoxelWindow.cpp  VoxelWindow.h
src/Camera/: Camera.cpp  Camera.h  FlyingCamera.h
src/Enums/: ShaderType.h
src/Helpers/: Color.h  OpenGlCommon.h  ValueScaling.h
src/Rendering/: ShaderProgram.cpp  ShaderProgram.h
src/Window/: WindowManager.cpp  WindowManager.h
src/meshes/: BaseMesh.cpp  BaseMesh.h  ChunkMesh.cpp  ChunkMesh.h  QuadMesh.cpp  QuadMesh.h
src/types/: Coordinate.cpp  Coordinate.h  Coordinates.h  Hsv.cpp  Hsv.h  Rgb.cpp  Rgb.h  Rgba.cpp  Rgba.h  Voxel.cpp  Voxel.h
